--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <br>
 
 <h1 class="heading" style="text-align:center;">Hello, How are you?</h1>
+  <p>Star us on <a href"https://github.com/Chinmayjha/Responsive-navigation-bar">Github</a></p>
 <script>
     const chk = document.getElementById('chk');
 
